# 01_Sign_Language_Translation

./: DESIGN_BRIEF.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: app.py
configs/: default.yaml  train_colab.yaml
deploy/: README.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md  translation_evaluation.md
notebooks/: COLAB_GUIDE.md  Sign_Language_Translation_Colab_H100.ipynb  _build_notebook.py
sample_data/: README.md  sample_sentences.json
src/signlang/: __init__.py  cli.py  config.py  logging_utils.py
src/signlang/agent/: __init__.py  llm_orchestrator.py  policy.py  state.py  tools.py  translate_agent.py
src/signlang/analysis/: __init__.py  error_analysis.py  latency.py  quality.py
src/signlang/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/signlang/automation/: __init__.py  autopilot.py
src/signlang/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/signlang/data/: __init__.py  dataset.py  download_dataset.py  lexicon.py  samples.py  synth_pose.py
src/signlang/grading/: __init__.py  checklist.py
src/signlang/models/: __init__.py  baseline.py  model_registry.py  neural_recognizer.py  neural_translator.py  sign2text.py
src/signlang/monitoring/: __init__.py  drift_report.py
src/signlang/pose/: __init__.py  engine.py  layout.py
src/signlang/segmentation/: __init__.py  segmenter.py
src/signlang/training/: __init__.py  evaluate.py  metrics.py  train_baseline.py  train_sign2text.py  tune.py
tests/: conftest.py  test_pipeline.py
